Remove SecurityTrails integration
